# dimroom

./: .gitignore  CMakeLists.txt  CMakeLists.txt.old  DESIGN_NOTES.md  INSTALL.md  Makefile  Makefile.old  ProblemStatement.md  README.md  TODO.md  cell.hpp  cell_formatter.hpp  cell_types.hpp  cell_types_formatter.hpp  column.hpp  command_handler.cpp  command_handler.hpp  command_interpreter.cpp  command_interpreter.hpp  contains.hpp  coordinate_formatter.hpp  coordinates.hpp  doxygen.config  file_io.hpp  jt_concepts.hpp  main.cpp  parse_utils.hpp  parser.cpp  parser.hpp  parser_formatter.hpp  query.cpp  query.hpp  row.hpp  table.hpp  table_formatter.hpp  type_utility.hpp  utility.hpp  vectorize.hpp
cmake/: FindReadline.cmake
include/: cell.hpp  cell_formatter.hpp  cell_types.hpp  cell_types_formatter.hpp  column.hpp  command_handler.hpp  command_interpreter.hpp  command_line.hpp  contains.hpp  coordinate_formatter.hpp  coordinates.hpp  dimroomConfig.h  dimroomConfig.h.in  jt_concepts.hpp  parse_utils.hpp  parser.hpp  parser_formatter.hpp  query.hpp  row.hpp  table.hpp  table_formatter.hpp  utility.hpp
src/: command_handler.cpp  command_interpreter.cpp  command_line.cpp  dimroom.cpp  main.cpp  query.cpp
test/: CMakeLists.txt  Makefile  PendingParserTests.md  cell_test.cpp  cell_types_test.cpp  column_test.cpp  command_interpreter_test.cpp  coordinates_test.cpp  general_fixture.hpp  parse_utils_test.cpp  parser_test.cpp  query_test.cpp  row_test.cpp  table_test.cpp  utility_test.cpp
test/include/: cell_test.hpp  cell_types_test.hpp  command_interpreter_test.hpp  coordinates_test.hpp  general_fixture.hpp  google_test_fixture.hpp  parse_utils_test.hpp  parser_test.hpp  query_test.hpp  table_test.hpp  utility_test.hpp
test/src/: GoogleTestDemo.cpp  cell_test.cpp  cell_types_test.cpp  column_test.cpp  command_interpreter_test.cpp  coordinates_test.cpp  parse_utils_test.cpp  parser_test.cpp  query_test.cpp  row_test.cpp  table_test.cpp  test_dimroom.cpp  utility_test.cpp
